--- a/styles/architect.css
+++ b/styles/architect.css
@@ -160,16 +160,15 @@
   font-weight: 400;
 }
 .experience-img{
-  position: relative;
   padding: 60px 0 0 90px;
 }
 .experience-img img{
   width: 500px;
 }
 .experience-img .experience-btn{
-  position: absolute;
-  top: 84%;
-  left: 5%;
+  position: relative;
+  bottom: 55px;
+  right: 50px;
   font-size: 22px;
   font-weight: 700;
   padding: 30px;
@@ -284,21 +283,12 @@
     font-weight: 400;
   }
   .experience-img{
-    position: relative;
-    padding: 30px 0 0 100px;
+    display: grid;
+    justify-content: center;
+    padding-top: 30px;
   }
   .experience-img img{
     width: 300px;
-  }
-  .experience-img .experience-btn{
-    position: absolute;
-    top: 84%;
-    left: 5%;
-    font-size: 22px;
-    font-weight: 700;
-    padding: 30px;
-    cursor: pointer;
-    border-radius: 5px;
   }
 }
 
@@ -393,21 +383,10 @@
   .experience-img{
     display: grid;
     justify-content: center;
-    position: relative;
-    padding: 30px 0 0 100px;
+    padding: 30px 0 0 0;
   }
   .experience-img img{
     width: 400px;
-  }
-  .experience-img .experience-btn{
-    position: absolute;
-    top: 90%;
-    left: 5%;
-    font-size: 22px;
-    font-weight: 700;
-    padding: 30px;
-    cursor: pointer;
-    border-radius: 5px;
   }
 }
 
@@ -464,11 +443,12 @@
   .features-title{
     font-size: 35px;
   }
+  
   /* Experience Styles */
   .experience{
     display: block;
     padding: 0 30px 50px 30px;
-    margin: 0 auto;
+    margin-bottom: 50px;
   }
   .experience-info{
     width: 100%;
@@ -510,22 +490,12 @@
   .experience-img{
     display: grid;
     justify-content: center;
-    position: relative;
-    padding: 60px 0 0 90px;
+    padding: 30px 0 0 0;
   }
   .experience-img img{
-    width: 500px;
+    width: 450px;
   }
-  .experience-img .experience-btn{
-    position: absolute;
-    top: 92%;
-    left: 15%;
-    font-size: 22px;
-    font-weight: 700;
-    padding: 30px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
@@ -572,22 +542,21 @@
   }
   /* Experience Styles */
   .experience{
-    display: block !important;
-    padding: 0;
-    margin: 0 auto;
+    padding: 0 30px 50px 30px;
+    margin-bottom: 50px;
   }
   .experience-info{
     width: 100%;
     display: grid;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    padding-right: 20px;
   }
   .experience-title{
     border-left: 4px solid #FF900E;
     font-size: 30px;
     font-weight: 700;
-    padding: 0;
+    padding: 0 100px 0 20px;
   }
   .experience-des{
     font-size: 16px;
@@ -616,24 +585,14 @@
   .experience-img{
     display: grid;
     justify-content: center;
-    position: relative;
-    padding: 60px 0 0 90px;
+    padding: 120px 0 0 20px;
   }
   .experience-img img{
-    width: 500px;
+    width: 450px;
   }
   .experience-img .experience-btn{
-    position: absolute;
-    top: 92%;
-    left: 15%;
-    font-size: 22px;
-    font-weight: 700;
-    padding: 30px;
-    cursor: pointer;
-    border-radius: 5px;
+    bottom: 90px;
+    right: 20px;
   }
 }
 
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-}
